Update ListModel's internal indexes when items are inserted/removed.

The changed signals of cached items were being emitted with
incorrect indexes if a previous item in the list was inserted or
removed, resulting in changes not being reflected in views.

Task-number: QTBUG-20286
Change-Id: Id2fb8e2875c6cbd4f2e4d14ef859b7a7a4bac8d9
Reviewed-on: http://codereview.qt.nokia.com/2252
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Bea Lam <bea.lam@nokia.com>